DevTools: Fix script formatter test.
TBR=vsevik

Review URL: https://codereview.chromium.org/214653002

git-svn-id: svn://svn.chromium.org/blink/trunk@170172 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/sources/debugger/script-formatter-breakpoints-3.html
+++ b/LayoutTests/inspector/sources/debugger/script-formatter-breakpoints-3.html
@@ -2,7 +2,7 @@
 <head>
 <script src="../../../http/tests/inspector/inspector-test.js"></script>
 <script src="../../../http/tests/inspector/debugger-test.js"></script>
-<script src="resources/unformatted.js"></script>
+<script src="resources/unformatted2.js"></script>
 <script>
 var test = function()
 {
@@ -15,7 +15,7 @@ var test = function()
     InspectorTest.runDebuggerTestSuite([
         function testBreakpointsSetInFormattedAndRemoveInOriginalSource(next)
         {
-            InspectorTest.showScriptSource("unformatted.js", didShowScriptSource);
+            InspectorTest.showScriptSource("unformatted2.js", didShowScriptSource);
 
             function didShowScriptSource(frame)
             {
