FlameChart: move CPUProfiler related part of the FlameChart into a separate file.
FlameChart was renamed to CPUProfileFlameChart
FlameChart.MainPane was renamed to FlameChart.

BUG=
R=pfeldman@chromium.org

Review URL: https://codereview.chromium.org/212593009

git-svn-id: svn://svn.chromium.org/blink/trunk@170173 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/profiler/cpu-profiler-flame-chart-overview.html
+++ b/LayoutTests/inspector/profiler/cpu-profiler-flame-chart-overview.html
@@ -809,13 +809,13 @@ function test()
     WebInspector.inspectorView.showPanel("profiles");
     var cpuProfileView = new WebInspector.CPUProfileView(profileAndExpectations);
     var dataProvider = new WebInspector.CPUFlameChartDataProvider(cpuProfileView);
-    var colorGenerator = new WebInspector.FlameChart.ColorGenerator();
+    var colorGenerator = new WebInspector.CPUProfileFlameChart.ColorGenerator();
     var timelineData = dataProvider.timelineData(colorGenerator);
-    console.log(Object.values(WebInspector.FlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 16)));
-    console.log(Object.values(WebInspector.FlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 8)));
-    console.log(Object.values(WebInspector.FlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 4)));
-    console.log(Object.values(WebInspector.FlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 2)));
-    console.log(Object.values(WebInspector.FlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 1)));
+    console.log(Object.values(WebInspector.CPUProfileFlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 16)));
+    console.log(Object.values(WebInspector.CPUProfileFlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 8)));
+    console.log(Object.values(WebInspector.CPUProfileFlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 4)));
+    console.log(Object.values(WebInspector.CPUProfileFlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 2)));
+    console.log(Object.values(WebInspector.CPUProfileFlameChart.OverviewPane.calculateDrawData(dataProvider, timelineData, 1)));
     InspectorTest.completeTest();
 }
 
