DevTools: Calculate user object distances from Window not from NativeContext.
Review URL: https://codereview.chromium.org/214713004

git-svn-id: svn://svn.chromium.org/blink/trunk@170188 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/profiler/heap-snapshot-containment-show-all.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot-containment-show-all.html
@@ -64,7 +64,7 @@ function test()
                 var builder = new InspectorTest.HeapSnapshotBuilder();
                 var rootNode = builder.rootNode;
 
-                var gcRootsNode = new InspectorTest.HeapNode("(GC roots)");
+                var gcRootsNode = new InspectorTest.HeapNode("(GC roots)", 0, InspectorTest.HeapNode.Type.synthetic);
                 rootNode.linkNode(gcRootsNode, InspectorTest.HeapEdge.Type.element);
 
                 var globalHandlesNode = new InspectorTest.HeapNode("(Global Handles)");
