--- a/LayoutTests/inspector/profiler/heap-snapshot-statistics.html
+++ b/LayoutTests/inspector/profiler/heap-snapshot-statistics.html
@@ -12,6 +12,7 @@ function test()
         var index = 0;
         for (type in InspectorTest.HeapNode.Type) {
             if (!InspectorTest.HeapNode.Type.hasOwnProperty(type)) continue;
+            if (type === InspectorTest.HeapNode.Type.synthetic) continue;
             ++index;
             var size = index * Math.pow(10, index - 1);
             var node = new InspectorTest.HeapNode(type, size, InspectorTest.HeapNode.Type[type]);
