DevTools: [Console] Display timestamps when the Console timestamps setting is re-enabled
Drive-by: Do not subscribe each message to the timestamp display setting but rather the ConsoleMessageView

R=eustas, vsevik
BUG=357175
NOTRY=true

Review URL: https://codereview.chromium.org/214693005

git-svn-id: svn://svn.chromium.org/blink/trunk@170190 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/console/console-timestamp.html
+++ b/LayoutTests/inspector/console/console-timestamp.html
@@ -40,6 +40,9 @@ function test()
     addMessageWithFixedTimestamp("<After>");
     addMessageWithFixedTimestamp("<After>", baseTimestamp + 456);
 
+    WebInspector.settings.consoleTimestampsEnabled.set(false);
+    WebInspector.settings.consoleTimestampsEnabled.set(true);
+
     InspectorTest.dumpConsoleMessages();
     InspectorTest.completeTest();
 }
