--- a/LayoutTests/css3/filters/blur-filter-page-scroll.html
+++ b/LayoutTests/css3/filters/blur-filter-page-scroll.html
@@ -10,6 +10,7 @@
             if (window.testRunner) {
                 // Force software rendering mode.
                 window.testRunner.overridePreference("WebKitAcceleratedCompositingEnabled", "0");
+                window.testRunner.waitUntilDone();
             }
         </script>
         <!-- Make sure the mock scrollbars are enabled after the call to overridePreference, otherwise the setting will be overwritten. -->
@@ -33,7 +34,7 @@
             }
 
             #redBox {
-                background-color: red; 
+                background-color: red;
                 height: 200px;
             }
 
@@ -42,14 +43,18 @@
                 height: 1000px;
             }
         </style>
-        <script src="../../fast/repaint/resources/repaint.js"></script>
+        <script src="../../resources/run-after-display.js"></script>
         <script type="text/javascript">
             function repaintTest() {
-                window.scrollTo(0, 100);
+                runAfterDisplay(function() {
+                    window.scrollTo(0, 100);
+                    if (window.testRunner)
+                        testRunner.notifyDone();
+                });
             }
         </script>
     </head>
-    <body onload="runRepaintTest()">
+    <body onload="repaintTest()">
         <div class="blur">
             <div id="fixedBox"></div>
             <div id="redBox"></div>
