--- a/LayoutTests/css3/filters/filter-repaint-child-layers.html
+++ b/LayoutTests/css3/filters/filter-repaint-child-layers.html
@@ -31,19 +31,25 @@
         }
     </style>
 
-    <script src="../../fast/repaint/resources/repaint.js"></script>
+    <script src="../../resources/run-after-display.js"></script>
     <script>
-        if (window.testRunner)
+        if (window.testRunner) {
             testRunner.dumpAsTextWithPixelResults();
+            testRunner.waitUntilDone();
+        }
 
         function repaintTest()
         {
-            document.querySelector(".before").classList.remove("before");
+            runAfterDisplay(function() {
+                document.querySelector(".before").classList.remove("before");
+                if (window.testRunner)
+                    testRunner.notifyDone();
+            });
         }
     </script>
 </head>
 
-<body onload="runRepaintTest()">
+<body onload="repaintTest()">
 
     <div class="blur">
         <div class="box"></div>
