--- a/LayoutTests/css3/filters/filter-repaint.html
+++ b/LayoutTests/css3/filters/filter-repaint.html
@@ -23,21 +23,26 @@
         background-color: red;
     }
   </style>
-  <script src="../../fast/repaint/resources/repaint.js"></script>
+  <script src="../../resources/run-after-display.js"></script>
   <script>
       if (window.testRunner) {
           testRunner.dumpAsTextWithPixelResults();
           // Force software rendering mode.
-          window.testRunner.overridePreference("WebKitAcceleratedCompositingEnabled", "0");
+          testRunner.overridePreference("WebKitAcceleratedCompositingEnabled", "0");
+          testRunner.waitUntilDone();
       }
 
       function repaintTest()
       {
-          document.getElementById('change').style.backgroundColor = "green";
+          runAfterDisplay(function() {
+              document.getElementById('change').style.backgroundColor = "green";
+              if (window.testRunner)
+                  testRunner.notifyDone();
+          });
       }
   </script>
 </head>
-<body onload="runRepaintTest()">
+<body onload="repaintTest()">
 
   <div class="blurry box">
       <div id="change" class="box">
