Use a global variable in the test to avoid flakiness in the Mac port.
Apparently, runOnOpenPopup1() function was being called again after invoking
iframe.contentWindow.location.reload(), right between finishing the execution of
runOnIFrameLoad() and finishJSTest(), in the Mac platform.

This patch avoids the issue by using one global flag to early return in
that function when the iframe has already been reloaded.

BUG=357176
R=tkent@chromium.org,eae@chromium.org

Review URL: https://codereview.chromium.org/214603003

git-svn-id: svn://svn.chromium.org/blink/trunk@170226 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/forms/suggestion-picker/week-suggestion-picker-reset-value-after-reload.html
+++ b/LayoutTests/fast/forms/suggestion-picker/week-suggestion-picker-reset-value-after-reload.html
@@ -13,7 +13,12 @@ var iframe;
 var testInput1;
 var testInput2;
 
+var iframeReloaded = false;
+
 function runOnOpenPopup1() {
+    if (iframeReloaded)
+        return;
+
     iframe = document.getElementById('iframe');
 
     popupWindow.focus();
@@ -48,6 +53,7 @@ function runOnOpenPopup2AfterClosing() {
 
     iframe.addEventListener('load', function () { parent.runOnIFrameLoad(); });
     iframe.contentWindow.location.reload();
+    iframeReloaded = true;
 }
 
 function runOnIFrameLoad()
