Remove repaint.js from layout tests
All of these tests don't seem to depend on minimizing repaints and are
more trying to make sure that something has repainted.  Therefore,
change them all to just use rAF rather than repaint.js and make them
pixel tests where applicable.

BUG=345027

Review URL: https://codereview.chromium.org/207383002

git-svn-id: svn://svn.chromium.org/blink/trunk@170237 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/compositing/layer-creation/fixed-position-scroll.html
+++ b/LayoutTests/compositing/layer-creation/fixed-position-scroll.html
@@ -31,25 +31,22 @@
         -webkit-transform: translateZ(0);
       }
     </style>
-    <script src="../../fast/repaint/resources/repaint.js"></script>
+    <script src="../../resources/run-after-display.js"></script>
     <script type="text/javascript" charset="utf-8">
       if (window.testRunner) {
         testRunner.dumpAsTextWithPixelResults();
         testRunner.waitUntilDone();
       }
 
-      function repaintTest()
-      {
-        window.scrollBy(0,-96);
-        if (window.testRunner)
-          testRunner.notifyDone();
-      }
-
       function doTest()
       {
         window.scrollBy(0,-2048);
         window.scrollBy(0,160);
-        runRepaintTest();
+        runAfterDisplay(function() {
+          window.scrollBy(0,-96);
+          if (window.testRunner)
+            testRunner.notifyDone();
+        });
       }
       window.addEventListener('load', doTest, false);
     </script>
