--- a/LayoutTests/compositing/repaint/newly-composited-on-scroll.html
+++ b/LayoutTests/compositing/repaint/newly-composited-on-scroll.html
@@ -53,7 +53,6 @@
     </style>
 </head>
 
-<script src="../../fast/repaint/resources/repaint.js"></script>
 <script src="../../resources/run-after-display.js"></script>
 
 <script>
@@ -74,7 +73,7 @@
 
 </script>
 
-<body onload="runRepaintTest()">
+<body onload="repaintTest()">
     <div id="content-container">
         <div id="composited"></div>
         <div id="positioned-2">
