--- a/LayoutTests/fast/canvas/canvas-as-image-incremental-repaint.html
+++ b/LayoutTests/fast/canvas/canvas-as-image-incremental-repaint.html
@@ -8,8 +8,12 @@
        content: -webkit-canvas(squares);
      }
    </style>
-  <script src="resources/repaint.js"></script>
+  <script src="../../resources/run-after-display.js"></script>
   <script type="application/x-javascript">
+    if (window.testRunner) {
+      testRunner.dumpAsTextWithPixelResults();
+      testRunner.waitUntilDone();
+    }
     function repaintTest()
     {
       var ctx = document.getCSSCanvasContext("2d", "squares", 300, 300);
@@ -19,10 +23,12 @@
 
       ctx.fillStyle = "rgba(0, 0, 200, 0.5)";
       ctx.fillRect (50, 50, 100, 100);
+      if (window.testRunner)
+        testRunner.notifyDone();
     }
   </script>
 </head>
-<body onload="runRepaintTest()">
+<body onload="runAfterDisplay(repaintTest)">
    <div></div>
 </body>
 </html>
