--- a/LayoutTests/fast/canvas/canvas-createImageBitmap-invalid-args.html
+++ b/LayoutTests/fast/canvas/canvas-createImageBitmap-invalid-args.html
@@ -82,7 +82,7 @@ xhr.onload = function() {
 }
 
 var xhr2 = new XMLHttpRequest();
-xhr2.open("GET", 'resources/repaint.js');
+xhr2.open("GET", 'resources/shadow-offset.js');
 xhr2.responseType = 'blob';
 xhr2.send();
 xhr2.onload = function() {
