--- a/LayoutTests/fast/canvas/drawImage-with-broken-image.html
+++ b/LayoutTests/fast/canvas/drawImage-with-broken-image.html
@@ -9,7 +9,7 @@
 
     // Create an image with invalid data.
     var invalidImage = new Image();
-    invalidImage.src = 'resources/repaint.js';
+    invalidImage.src = 'resources/shadow-offset.js';
     invalidImage.onerror = draw;
 
     var ctx = document.createElement("canvas").getContext('2d');
