--- a/LayoutTests/fast/repaint/background-blend-mode-image-color-dynamic-expected.html
+++ b/LayoutTests/fast/repaint/background-blend-mode-image-color-dynamic-expected.html
@@ -10,8 +10,7 @@
     }
 </style>
 <!-- This file should contain a duck with multiply blending set from script. -->
-<script src="resources/repaint.js" type="text/javascript"></script>
-<body onload="runRepaintTest()">
+<body onload="repaintTest()">
     <script>
         function repaintTest() {
             document.getElementById('blender').style.backgroundBlendMode = "multiply, normal";
