--- a/LayoutTests/fast/table/simple_paint.html
+++ b/LayoutTests/fast/table/simple_paint.html
@@ -19,9 +19,9 @@
             }
         }
     </script>
-    <script type="text/javascript" src="../repaint/resources/repaint.js"></script>
+    <script type="text/javascript" src="../../resources/run-after-display.js"></script>
 </head>
-    <body onload="runRepaintTest()">
+    <body onload="runAfterDisplay(repaintTest);">
     <table class="testtable">
       <tr>
         <td></td>
