--- a/LayoutTests/compositing/repaint/newly-composited-repaint-rect.html
+++ b/LayoutTests/compositing/repaint/newly-composited-repaint-rect.html
@@ -47,7 +47,6 @@
 </head>
 
 <script src="../../resources/run-after-display.js"></script>
-<script src="../../fast/repaint/resources/repaint.js"></script>
 
 <script>
     if (window.testRunner) {
@@ -60,21 +59,23 @@
     }
 
     function repaintTest() {
-        // Changing the position will cause the scrolldiv to become composited becuase it overlaps another compostied element.
-        changeDivPosition();
-
-        // Force DumpRenderTree to do a layout and repaint here, this is where the repaintRect
-        // goes wrong because it does not get updated for a newly composited element.
         runAfterDisplay(function() {
-            // Scrolling a little will demonstrate whether the repaint rect is correct or not.
-            document.getElementById('scrolldiv').scrollTop = 500;
-            testRunner.notifyDone();
+          // Changing the position will cause the scrolldiv to become composited becuase it overlaps another compostied element.
+          changeDivPosition();
+
+          // Force DumpRenderTree to do a layout and repaint here, this is where the repaintRect
+          // goes wrong because it does not get updated for a newly composited element.
+          runAfterDisplay(function() {
+              // Scrolling a little will demonstrate whether the repaint rect is correct or not.
+              document.getElementById('scrolldiv').scrollTop = 500;
+              testRunner.notifyDone();
+          });
         });
     }
 
 </script>
 
-<body onload="runRepaintTest()">
+<body onload="repaintTest()">
   <div class="composited box"></div>
   <div id="scrolldiv">
     <div class="shouldNotBeSeen box"></div>
