--- a/LayoutTests/fast/canvas/canvas-resize-after-paint-without-layout.html
+++ b/LayoutTests/fast/canvas/canvas-resize-after-paint-without-layout.html
@@ -12,23 +12,27 @@
         height: 300px;
       }
     </style>
-    <script src="resources/repaint.js"></script>
+    <script src="../../resources/run-after-display.js"></script>
     <script>
-      if (window.testRunner)
+      if (window.testRunner) {
         testRunner.dumpAsTextWithPixelResults();
+        testRunner.waitUntilDone();
+      }
 
       function runTest() {
         var canvas = document.getElementById('canvas');
         var ctx = canvas.getContext('2d');
         ctx.fillStyle = 'red';
         ctx.fillRect(0, 0, 300, 300);
-        runRepaintTest();
+        runAfterDisplay(repaintTest);
       }
 
       function repaintTest() {
         var canvas = document.getElementById('canvas');
         // This changes the resolution of the canvas but keeps its layout size constant.
         canvas.width = canvas.width / 2;
+        if (window.testRunner)
+          testRunner.notifyDone();
       }
     </script>
   </head>
