--- a/LayoutTests/fast/css3-text/css3-text-decoration/repaint/repaint-text-decoration-style.html
+++ b/LayoutTests/fast/css3-text/css3-text-decoration/repaint/repaint-text-decoration-style.html
@@ -6,10 +6,12 @@
         <link rel="help" href="http://http://dev.w3.org/csswg/css3-text/#text-decoration-style"/>
         <meta name="flags" content="ahem"/>
         <script>
-            if (window.testRunner)
+            if (window.testRunner) {
                 testRunner.dumpAsTextWithPixelResults();
+                testRunner.waitUntilDone();
+            }
         </script>
-        <script src="../../../repaint/resources/repaint.js" type="text/javascript"></script>
+        <script src="../../../../resources/run-after-display.js" type="text/javascript"></script>
         <script>
             function repaintTest() {
                 document.getElementById("test-initial-blank").style.textDecorationStyle = '';
@@ -17,10 +19,12 @@
                 document.getElementById("test-invalid-unknown").style.textDecorationStyle = 'unknown';
                 document.getElementById("test-inherit-explicit").style.textDecorationStyle = 'inherit';
                 document.getElementById("test-repaint-parent").style.textDecorationStyle = 'double';
+                if (window.testRunner)
+                    testRunner.notifyDone();
             }
         </script>
     </head>
-    <body onload="runRepaintTest();" style="font: 20px Ahem; -webkit-font-smoothing: none; -webkit-text-stroke: 1px black; -webkit-text-fill-color: white;">
+    <body onload="runAfterDisplay(repaintTest);" style="font: 20px Ahem; -webkit-font-smoothing: none; -webkit-text-stroke: 1px black; -webkit-text-fill-color: white;">
         <!-- Blank and 'initial' values fallbacks to 'solid' on repaintTest(). -->
         <p><span id="test-initial-blank" style="text-decoration: underline; text-decoration-style: double;">lorem ipsum</span></p>
         <p><span id="test-initial-explicit" style="text-decoration: underline; text-decoration-style: double;">lorem ipsum</span></p>
