--- a/LayoutTests/fast/repaint/4774354.html
+++ b/LayoutTests/fast/repaint/4774354.html
@@ -1,4 +1,4 @@
-<script src="resources/repaint.js" type="text/javascript"></script>
+<script src="../../resources/run-after-display.js" type="text/javascript"></script>
 <script type="text/javascript">
 
 function step1() {
@@ -19,7 +19,7 @@ function step2() {
     var text = body.firstChild;
     sel.setPosition(text, text.length);
     // Wait for the caret to paint.
-    window.setTimeout(runRepaintTest, 100);
+    runAfterDisplay(repaintTest);
 }
 
 function repaintTest() {
@@ -28,9 +28,7 @@ function repaintTest() {
     var body = doc.body;
     var text = body.firstChild;
     var sel = frame.getSelection();
-    
     sel.setBaseAndExtent(text, 5, text, text.length);
-    
     if (window.testRunner)
         window.testRunner.notifyDone();
 }
