--- a/LayoutTests/fast/repaint/percent-minheight-resize-expected.html
+++ b/LayoutTests/fast/repaint/percent-minheight-resize-expected.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="resources/repaint.js"></script>
   <script>
     function repaintTest()
     {
-      document.getElementById('resize-target').style.height = '200px'; 
+      document.getElementById('resize-target').style.height = '200px';
     }
   </script>
 </head>
 
-<body style="margin: 0; padding: 0; overflow: hidden;" onload="runRepaintTest()">
+<body style="margin: 0; padding: 0; overflow: hidden;" onload="repaintTest()">
   <div id="resize-target" style="width: 400px; height: 400px; position: absolute;"></div>
 
   <div style="width: 100px; height: 100px; background-color: green; position: absolute;"></div>
