--- a/LayoutTests/fast/sub-pixel/selection/selection-rect-in-sub-pixel-table.html
+++ b/LayoutTests/fast/sub-pixel/selection/selection-rect-in-sub-pixel-table.html
@@ -10,17 +10,23 @@ body {
   font: 82% arial,sans-serif;
 }
 </style>
-<script src="../../repaint/resources/repaint.js" type="text/javascript"></script>
+<script src="../../../resources/run-after-display.js" type="text/javascript"></script>
 <script>
+if (window.testRunner) {
+    testRunner.waitUntilDone();
+    testRunner.dumpAsTextWithPixelResults();
+}
 function repaintTest() {
-	window.getSelection().removeAllRanges();
+    window.getSelection().removeAllRanges();
+    if (window.testRunner)
+        testRunner.notifyDone();
 }
 </script>
 </head>
-<body onload="runRepaintTest()">
+<body onload="runAfterDisplay(repaintTest)">
 <table style="position: absolute; top: 1.5px;">
   <tr>
-  	<td>
+  <td>
 <pre id="pre">There should be no selection artifacts below.
 </pre>
     </td>
