--- a/LayoutTests/fast/sub-pixel/sub-pixel-iframe-copy-on-scroll.html
+++ b/LayoutTests/fast/sub-pixel/sub-pixel-iframe-copy-on-scroll.html
@@ -10,10 +10,11 @@
     display: inline-block;
 }
 </style>
-<script src="../repaint/resources/repaint.js" type="text/javascript"></script>
+<script src="../../resources/run-after-display.js" type="text/javascript"></script>
 <script>
 if (window.testRunner) {
   testRunner.waitUntilDone();
+  testRunner.dumpAsTextWithPixelResults();
   internals.settings.setMockScrollbarsEnabled(true);
 }
 
@@ -37,7 +38,7 @@ function repaintTest() {
 }
 </script>
 </head>
-<body onload="setupIframes();runRepaintTest()">
+<body onload="setupIframes();runAfterDisplay(repaintTest);">
   <p>The iframes below should remain grey with no repaint artifacts when scrolling.</p>
   <div>
     <div class="container">
