--- a/LayoutTests/fast/sub-pixel/transformed-iframe-copy-on-scroll.html
+++ b/LayoutTests/fast/sub-pixel/transformed-iframe-copy-on-scroll.html
@@ -16,10 +16,11 @@
   -webkit-transform: rotate3d(0, 0, 1, 45deg);
 }
 </style>
-<script src="../repaint/resources/repaint.js" type="text/javascript"></script>
+<script src="../../resources/run-after-display.js" type="text/javascript"></script>
 <script>
 if (window.testRunner) {
   testRunner.waitUntilDone();
+  testRunner.dumpAsTextWithPixelResults();
   internals.settings.setMockScrollbarsEnabled(true);
 }
 
@@ -43,7 +44,7 @@ function repaintTest() {
 }
 </script>
 </head>
-<body onload="setupIframes();runRepaintTest()">
+<body onload="setupIframes();runAfterDisplay(repaintTest);">
   <p>The iframes below should remain grey with no repaint artifacts when scrolling.</p>
   <div>
     <div class="container">
