Prevent ctrl+wheel from scrolling in more places
Chromium now sends ctrl+wheel events to webkit first before using them for zooming. Rather than prevent scrolling for these events in EventHandler::handleWheel, push that check a couple levels deeper into ScrollableArea::handleWheelEvent.  In addition to EventHandler, this code is also called by WebPluginScrollbarImpl and so will fix some additional cases.

This is mostly already tested by the fast/event/wheelevent-ctrl.html test I added in http://crrev.com/183403002.  I've extended that test to cover document and div scrolling cases and ensured it fails reliably if either the ScrollableArea or EventHandler::defaultWheelEventHandler check is removed. 

BUG=352474, 111059

Review URL: https://codereview.chromium.org/212913002

git-svn-id: svn://svn.chromium.org/blink/trunk@170238 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/events/wheelevent-ctrl.html
+++ b/LayoutTests/fast/events/wheelevent-ctrl.html
@@ -12,13 +12,16 @@ var testDiv;
 function runTest() {
 
     testDiv = document.getElementById('target');
-    testDiv.addEventListener('wheel', wheelHandler);
+    document.addEventListener('wheel', wheelHandler);
     if (!window.eventSender) {
         debug("FAIL: This test requires window.eventSender.");
         return;
     }
 
-    // Verify that wheel with ctrl modifier is fired property but doesn't scroll.
+    debug('Test mousewheel events over scrollable div');
+
+    debug('With ctrl modifier set');
+    wheelEventCount = 0;
     eventSender.mouseMoveTo(testDiv.offsetLeft + 5, testDiv.offsetTop + 5);
     eventSender.mouseScrollBy(0, scrollAmount, false, true, "ctrlKey");
     shouldBe("wheelEventCount", "1");
@@ -26,13 +29,36 @@ function runTest() {
     shouldBeTrue("ctrlKey");
     shouldBe("testDiv.scrollTop", "0");
 
-    // Verify that without the ctrl modifier we scroll as normal.
+    debug('Without ctrl');
+    wheelEventCount = 0;
     eventSender.mouseMoveTo(testDiv.offsetLeft + 5, testDiv.offsetTop + 5);
     eventSender.mouseScrollBy(0, scrollAmount, false, true);
-    shouldBe("wheelEventCount", "2");
+    shouldBe("wheelEventCount", "1");
     shouldEvaluateTo("deltaY", expectedDeltaY);
     shouldBeFalse("ctrlKey");
     shouldBe("testDiv.scrollTop", "deltaY");
+
+    debug('');
+    debug('Test mousewheel events over the document');
+    testDiv = document.getElementById('target2');
+
+    debug('With ctrl modifier set');
+    wheelEventCount = 0;
+    eventSender.mouseMoveTo(testDiv.offsetLeft + 5, testDiv.offsetTop + 5);
+    eventSender.mouseScrollBy(0, scrollAmount, false, true, "ctrlKey");
+    shouldBe("wheelEventCount", "1");
+    shouldEvaluateTo("deltaY", expectedDeltaY);
+    shouldBeTrue("ctrlKey");
+    shouldBe("document.body.scrollTop", "0");
+    
+    debug('Now without ctrl');
+    wheelEventCount = 0;
+    eventSender.mouseMoveTo(testDiv.offsetLeft + 5, testDiv.offsetTop + 5);
+    eventSender.mouseScrollBy(0, scrollAmount, false, true);
+    shouldBe("wheelEventCount", "1");
+    shouldEvaluateTo("deltaY", expectedDeltaY);
+    shouldBeFalse("ctrlKey");
+    shouldBe("window.scrollY", "deltaY");
 }
 
 var wheelEventCount = 0;
@@ -52,6 +78,10 @@ function wheelHandler(e) {
         Scroll mouse wheel over here<br/><br/><br/><br/>
         END
     </div>
+    <div id="target2" style="border:solid 1px blue;">
+       And scroll the document here
+    </div>
+    <div style="height: 2000px;"></div>
 </span>
 <div id="console"></div>
 <script>
