Remove display() from more layout tests
These are the remaining tests that call display() directly and also do
not need actually need a paint phase to test what they intend to.

BUG=345027

Review URL: https://codereview.chromium.org/196573042

git-svn-id: svn://svn.chromium.org/blink/trunk@170239 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/css3/filters/multiple-filters-invalidation.html
+++ b/LayoutTests/css3/filters/multiple-filters-invalidation.html
@@ -14,17 +14,19 @@ html {
 <body>
 <div id="rect"></div>
 </body>
+<script src="../../resources/run-after-display.js"></script>
 <script>
 function changeBackground() {
     document.getElementById("rect").style.background = "green";
+    if (window.testRunner) {
+        testRunner.notifyDone();
+    }
 }
 
 if (window.testRunner) {
     testRunner.dumpAsTextWithPixelResults();
-    testRunner.display();
-    changeBackground();
-} else 
-    window.setTimeout(changeBackground, 250);
-
+    testRunner.waitUntilDone();
+}
+runAfterDisplay(changeBackground);
 </script>
 </html>
