--- a/LayoutTests/fast/animation/request-animation-frame-during-modal.html
+++ b/LayoutTests/fast/animation/request-animation-frame-during-modal.html
@@ -14,17 +14,9 @@ onload = function()
     debug('Setting callback');
     window.requestAnimationFrame(function() { debug('Callback fired'); }, document.body);
     debug('Showing modal dialog');
-    var src = 'if (window.testRunner) {' +
-              '    testRunner.display();' +
-              '    window.close();' +
-              '} else {'+
-              '    window.setTimeout(window.close, 10);'+
-              '}';
+    var src = 'window.setTimeout(window.close, 100);';
     showModalDialog('data:text/html,<script>' + src + '</' + 'script>');
     debug('Returned from modal dialog');
-    if (window.testRunner) {;
-        testRunner.display();
-    }
 
     window.requestAnimationFrame(function() {
         isSuccessfullyParsed();
