--- a/LayoutTests/fast/layers/add-layer-with-nested-stacking.html
+++ b/LayoutTests/fast/layers/add-layer-with-nested-stacking.html
@@ -13,17 +13,13 @@
 }
 </style>
 <div id="test" style="display: none"></div>
+<script src="../../resources/run-after-display.js"></script>
 <script type="text/javascript">
-    function test()
-    {
+    if (window.testRunner)
+        testRunner.waitUntilDone();
+    runAfterDisplay(function() {
         document.getElementById("test").style.display = "block";
-    }
-
-    if (!window.testRunner)
-        setTimeout(test, 0);
-    else {
-        document.body.offsetTop;
-        testRunner.display();
-        test();
-    }
+        if (window.testRunner)
+            testRunner.notifyDone();
+    });
 </script>
