--- a/LayoutTests/fast/layers/inline-dirty-z-order-lists.html
+++ b/LayoutTests/fast/layers/inline-dirty-z-order-lists.html
@@ -9,17 +9,14 @@
     <div id="inner" style="position: absolute; height: 50px; width: 50px; background-color: blue;">
     </div>
 </span>
+<script src="../../resources/run-after-display.js"></script>
 <script>
-    function test()
-    {
+    if (window.testRunner)
+        testRunner.waitUntilDone();
+    runAfterDisplay(function() {
         document.getElementById("outer").style.removeProperty("z-index");
         document.getElementById("inner").style.display = "none";
-    }
-
-    if (window.testRunner) {
-        document.body.offsetTop;
-        testRunner.display();
-        test();
-    } else
-        setTimeout(test, 0);
+        if (window.testRunner)
+            testRunner.notifyDone();
+    });
 </script>
