--- a/LayoutTests/fast/layers/remove-layer-with-nested-stacking.html
+++ b/LayoutTests/fast/layers/remove-layer-with-nested-stacking.html
@@ -5,17 +5,13 @@ The square should be a uniform shade of green.
         <span style="display: inline-block; width: 100px; height: 50px; background-color: green; opacity: 0.5;"></span>
     </div>
 </span>
+<script src="../../resources/run-after-display.js"></script>
 <script>
-    function test()
-    {
+    if (window.testRunner)
+        testRunner.waitUntilDone();
+    runAfterDisplay(function() {
         document.getElementById("inner").style.float = "none";
-    }
-
-    if (!window.testRunner)
-        setTimeout(test, 0);
-    else {
-        document.body.offsetTop;
-        testRunner.display();
-        test();
-    }
+        if (window.testRunner)
+            testRunner.notifyDone();
+    });
 </script>
