DOM-object leak detection at run_webkit_tests.py
Now we're implementing the DOM-object leak detector. When the number of
DOM objects is increased after a test, we can assume that the test
causes a leak. This feature is available at content_shell with the flag
--enable-leak-detection.

This patch enables this leak detection feature at run_webkit_test.py
with the flag --enable-leak-detection.

content_shell is assumed to report a detected leak with the following
format:

  #LEAK - renderer pid PID (DETAIL_IN_JSON_FORMAT)

and run_webkit_test.py will treat this as a kind of error by this patch.

See also:
https://docs.google.com/a/chromium.org/document/d/1sFAsZxeISKnbGdXoLZlB2tDZ8pvO102ePFQx6TX4X14/edit

BUG=332630
TEST=test-webkitpy

Review URL: https://codereview.chromium.org/148153009

git-svn-id: svn://svn.chromium.org/blink/trunk@170255 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/harness/results.html
+++ b/LayoutTests/fast/harness/results.html
@@ -206,6 +206,7 @@ function globalState()
     if (!g_state) {
         g_state = {
             crashTests: [],
+            leakTests: [],
             flakyPassTests: [],
             hasHttpTests: false,
             hasImageFailures: false,
@@ -491,6 +492,11 @@ function processGlobalStateFor(testObject)
         return;
     }
 
+    if (actual == 'LEAK') {
+        globalState().leakTests.push(testObject);
+        return;
+    }
+
     if (actual == 'TIMEOUT') {
         globalState().timeoutTests.push(testObject);
         return;
@@ -681,7 +687,9 @@ function testList(tests, header, tableId)
         else if (tableId == 'crash-tests-table') {
             html += resultLink(stripExtension(test), '-crash-log.txt', 'crash log');
             html += resultLink(stripExtension(test), '-sample.txt', 'sample');
-        } else if (tableId == 'timeout-tests-table') {
+        } else if (tableId == 'leak-tests-table')
+            html += resultLink(stripExtension(test), '-leak-log.txt', 'leak log');
+        else if (tableId == 'timeout-tests-table') {
             // FIXME: only include timeout actual/diff results here if we actually spit out results for timeout tests.
             html += textResultLinks(stripExtension(test));
         }
@@ -1329,6 +1337,9 @@ function generatePage()
 
     if (globalState().crashTests.length)
         html += testList(globalState().crashTests, 'Tests that crashed', 'crash-tests-table');
+
+    if (globalState().leakTests.length)
+        html += testList(globalState().leakTests, 'Tests that leaked', 'leak-tests-table');
 
     html += failingTestsTable(globalState().failingTests,
         'Tests that failed text/pixel/audio diff', 'results-table');
