--- a/LayoutTests/fast/html/imports/import-events-inline.html
+++ b/LayoutTests/fast/html/imports/import-events-inline.html
@@ -9,7 +9,7 @@ function handle(event)
     list.push(event.type + '@' + event.target.id);
     if (list.length < 3)
         return;
-    expected = ['load@shouldLoad', 'error@shouldError', 'click@toClick'];
+    expected = ['click@toClick', 'load@shouldLoad', 'error@shouldError'];
     shouldBe('window.list', 'expected');
     finishJSTest();
 }
