Make canvas perf tests run less than 6 sec.
Perf tests in PerformanceTests/Canvas usually run 6 times; 1 for warm-up, 5 for data.
Currently, upload-canvas-2d-to-texture.html takes ~72 sec on Intel Ivy Bridge. If we have
Android perf bot, this perf test takes huge time.

upload-canvas-2d-to-texture.html calls glTexImage2d() 1000 times per one run. Ivy Bridge
without Accelerated 2D Canvas can call glTexImage2d() ~85 times/sec, so one run takes
12 sec, and 6 runs take 72 sec.

This CL limits 1 sec per one run for all canvas perf tests. To apply common logic to 6 tests,
this CL introduces canvas_runner.js, which is a wrapper of PerformanceTests/resources/runner.js.
canvas_runner.js makes sure that one run takes less than 1 sec. The algorithm is 
min(1 sec, time to call api 1000 times).

This CL effects test results slightly, because now upload-canvas-2d-to-texture.html takes
6 sec, instead of 72 sec.

BUG=242244
NOTRY=true

Review URL: https://codereview.chromium.org/200253002

git-svn-id: svn://svn.chromium.org/blink/trunk@170288 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/PerformanceTests/Canvas/upload-webgl-to-texture.html
+++ b/PerformanceTests/Canvas/upload-webgl-to-texture.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <script src="../resources/runner.js"></script>
+<script src="resources/canvas_runner.js"></script>
 <script>
 
 var sourceCanvas3D = document.createElement('canvas');
@@ -9,10 +10,8 @@ var sourceCtx = sourceCanvas3D.getContext('experimental-webgl');
 var destCanvas3D = document.createElement('canvas');
 var destCtx = destCanvas3D.getContext('experimental-webgl');
 if (!sourceCtx || !destCtx)
-    PerfTestRunner.logFatalError("\nWebGL is not supported or enabled on this platform!\n");
-var MEASURE_DRAW_TIMES = 100;
-var MAX_COUNT = 60000;
-var count = 0;
+    CanvasRunner.logFatalError("\nWebGL is not supported or enabled on this platform!\n");
+var tex = null;
  
 function setSize(width, height) {
     sourceCanvas3D.width = width;
@@ -34,35 +33,32 @@ function renderWebGL(gl) {
     gl.clear(gl.COLOR_BUFFER_BIT);
 }
 
-function uploadWebGLToWebGLTexture() {
-    var tex = destCtx.createTexture();
+function preRun() {
+    tex = destCtx.createTexture();
     destCtx.bindTexture(destCtx.TEXTURE_2D, tex);
-
-    var start = PerfTestRunner.now();
-
-    for (var i = 0; i < MEASURE_DRAW_TIMES; i++) {
-        destCtx.texImage2D(destCtx.TEXTURE_2D, 0, destCtx.RGBA, destCtx.RGBA, destCtx.UNSIGNED_BYTE, sourceCanvas3D);
-    }
-    destCtx.readPixels(0, 0, 1, 1, sourceCtx.RGBA, sourceCtx.UNSIGNED_BYTE, new Uint8Array(4));
-    destCtx.deleteTexture(tex);
-    count++;
-
-    var elapsedTime = PerfTestRunner.now() - start;
-    PerfTestRunner.measureValueAsync(MEASURE_DRAW_TIMES * 1000 / elapsedTime);
-    if (count < MAX_COUNT)
-        requestAnimationFrame(uploadWebGLToWebGLTexture);
 }
 
-function onCompletedRun() {
-    count = MAX_COUNT;
+function doRun() {
+    destCtx.texImage2D(destCtx.TEXTURE_2D, 0, destCtx.RGBA, destCtx.RGBA, destCtx.UNSIGNED_BYTE, sourceCanvas3D);
+}
+
+function ensureComplete() {
+    destCtx.readPixels(0, 0, 1, 1, sourceCtx.RGBA, sourceCtx.UNSIGNED_BYTE, new Uint8Array(4));
+}
+
+function postRun() {
+    destCtx.deleteTexture(tex);
 }
 
 window.onload = function () {
-    PerfTestRunner.prepareToMeasureValuesAsync({done: onCompletedRun, unit: 'runs/s',
-        description: "This benchmark checks the speed on uploading WebGL(1024x1024) to WebGL Texture(1024x1024)."});
     setSize(1024, 1024);
     renderWebGL(sourceCtx);
-    uploadWebGLToWebGLTexture();
+    CanvasRunner.start({
+        description: "This benchmark checks the speed on uploading WebGL(1024x1024) to WebGL Texture(1024x1024).",
+        preRun: preRun,
+        doRun: doRun,
+        ensureComplete: ensureComplete,
+        postRun: postRun});
 }
 
 </script>
