--- a/LayoutTests/fast/dom/shadow/host-wrapper-reclaimed.html
+++ b/LayoutTests/fast/dom/shadow/host-wrapper-reclaimed.html
@@ -16,6 +16,7 @@ gc(true);
 
 try { shadow.innerHTML = "Hello"; } catch(e) { }
 shadow.appendChild(document.createElement("span"));
+shadow.applyAuthorStyles = false;
 
 document.body.innerHTML = "PASS unless crash.";
 </script>
